tests/baselines/reference/asiPublicPrivateProtected.errors.txt
tests/cases/compiler/asiPublicPrivateProtected.ts(1,1): error TS2304: Cannot find name 'public'.
tests/cases/compiler/asiPublicPrivateProtected.ts(12,1): error TS2304: Cannot find name 'private'.
tests/cases/compiler/asiPublicPrivateProtected.ts(23,1): error TS2304: Cannot find name 'protected'.


==== tests/cases/compiler/asiPublicPrivateProtected.ts (3 errors) ====
    public
    ~~~~~~
!!! error TS2304: Cannot find name 'public'.
    class NonPublicClass {
        public s() {
        }
    }
    
    class NonPublicClass2 {
        public
        private nonPublicFunction() {
        }
    }
    private
    ~~~~~~~
!!! error TS2304: Cannot find name 'private'.
    class NonPrivateClass {
        private s() {
        }
    }
    
    class NonPrivateClass2 {
        private
        public nonPrivateFunction() {
        }
    }
    protected
    ~~~~~~~~~
!!! error TS2304: Cannot find name 'protected'.
    class NonProtectedClass {
      protected s() {
      }
    }
    
    class NonProtectedClass2 {
        protected
        public nonProtectedFunction() {
        }
    }
    
    class ClassWithThreeMembers {
        public
        private
        protected
    }
    